--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
-
-h1{
-    font-size: 20px;
-}
 blockquote{
     max-width: 600px;
     margin:10px ;
     padding: 15px;
     border-left: 8px solid green;
-    background-color:#f8fffe;
+    background-color:#f8fffe"";
     font-weight: bold;
 }
